--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.07.2022 08:15:45</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.07.2022 08:46:51</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,42 +7,35 @@
 <h5>Čtvrtek, 14. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Bramboračka</strong>
+<strong>Vývar se zeleninou a nudlemi</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Kuřecí nudličky na červeném kari s limetkovým kuskusem</strong>
+<strong>Smažené rybí file se šťouchaným bramborem a tatarkou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Štika po Toskánsku s pečeným bramborem a bylinkovým dipem</strong>
+<strong>Špagety s pestem ze sušených rajčat, kuřecím masem a parmazánem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							143,-
+							139,-
 						</span>
 </p>
 <p>
-<strong>Celerový salát s restovanou šunkou a bagetkou</strong>
-<!--<span class="dots">..........................................................................</span>-->
-<span class="priceLabel">
-							131,-
-						</span>
-</p>
-<p>
-<strong>Teplý bufet: Tilapie s rajčaty a parmazánem, rýže, zelenina, smetanové brambory, Kuřecí křídla</strong>
+<strong>Teplý bufet: Žebírka Pečená, štika s kapari a olivami, zelenina, kari cizrna, pečené brambory</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>Salátový bufet: tzatziki, rajčatový</strong>
+<strong>Salátový bufet: Rajčatový, celerový, kuskus s kapari, olivami a sušenými rajčaty</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
@@ -69,13 +62,28 @@
 <div class="cena">45 Kč</div>
 <div class="clear"></div>
 </li>
+<li class="poznamka">
+<div class="polozka">Višňový dort </div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Malinový jogurt</div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
 <li class="polevka">
-<div class="polozka">300ml Boršč se zakysanou smetanou; v menu  <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="polozka">300ml Boršč se zakysanou smetanou; v menu  <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">39 Kč</div>
 <div class="clear"></div>
 </li>
 <li class="polevka">
-<div class="polozka">300ml Boršč se zakysanou smetanou; samostatně <em title="Mléko">7</em><em title="Celer">9</em></div>
+<div class="polozka">300ml Boršč se zakysanou smetanou; samostatně <em title="Obiloviny obsahující lepek">1</em><em title="Mléko">7</em><em title="Celer">9</em></div>
 <div class="cena">49 Kč</div>
 <div class="clear"></div>
 </li>
