--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.07.2022 08:46:51</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 14.07.2022 09:11:34</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -135,7 +135,7 @@
 <tr><th>RYBARNA<br><a href="http://rybarna.net/denni-menu/">http://rybarna.net/denni-menu/</a></th></tr>
 <tr>
 <td>
-<ol><li>Filet z z atlantickeho hejka smazeny v pivnim testicku, bramborovy salat s cervenou repou, zelenymi bylinkami, cibulkou a majonezou, citron {L} 149</li><li>Peceny filet z cerstve prazmy kralovske s relisem z cerstvych okurek, bramborovy salat s cervenou repou, zelenymi bylinkami, cibulkou a majonezou 179</li><li>Burrito s trhanym barbecue hovezim s pecenymi palivymi paprikami a cervenymi fazolemi, jogurovy dip, jasminova ryze, salatek {L} 149</li><li>Grilovane medailonky z krutich prsou s fazolovymi lusky a houbovou omackou, pecene brambory, salatek {L} 179</li><li>Zapecene papriky plnene indickym kari ze zeleneho hrachu se zazvorem, jogurtem a makem, salatek 149</li></ol>
+<ol><li>Thajske massaman kari s kousky rybich filetu, lilky, zeleninou, kokosovym mlekem a arasidy, jasminova ryze 149</li><li>Spagety s kousky chobotnice, krevetami, cerstvymi rajcaty a bazalkovo-orechovym pestem 179</li><li>Nam tok – thajsky steakovy salat s limetkami, matou, chilli a salotkou, ryzove nudle, salatek 149</li><li>Smazene rizecky z krutich prsou a veprove panenky, stouchane brambory s kapustou, okurkovy salatek, citron {L} 179</li><li>Kapustove placicky s petrzelkou a muskatem, bramborovy salat s cervenou repou, zelenymi bylinkami a majonezou {L} 149</li></ol>
 </td>
 </tr>
 </table>
