--- a/menu/content/ambient-menu.html
+++ b/menu/content/ambient-menu.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.07.2022 08:14:43</small><table >
+<!DOCTYPE html PUBLIC "-//W3C//DTD HTML 4.01 Transitional//EN"><html><head><meta content="text/html; charset=UTF-8"http-equiv="content-type"><title>Lunch menu</title><link rel="stylesheet" href="ambient-menu-style.css"><link rel="icon" type="image/png" href="https://raaimo.github.io/menu/content/ambient-menu-icon.png"></head><small>Last update: 15.07.2022 08:45:02</small><table >
 <tr><th>SRDCOVKA<br><a href="http://www.jidelnasrdcovka.cz/">http://www.jidelnasrdcovka.cz/</a></th></tr>
 <tr>
 <td>
@@ -7,35 +7,35 @@
 <h5>Pátek, 15. 07. 2022</h5>
 <span class="line"></span>
 <p>
-<strong>Vývar se zeleninou a nudlemi</strong>
+<strong>Bramborová se žampiony</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							35,-
 						</span>
 </p>
 <p>
-<strong>Smažené rybí file se šťouchaným bramborem a tatarkou</strong>
+<strong>Frankfurtská veprova plec s houskovým knedlíkem NEBO těstovinou</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							139,-
 						</span>
 </p>
 <p>
-<strong>Špagety s pestem ze sušených rajčat, kuřecím masem a parmazánem</strong>
+<strong>Dukátové buchtičky s vanilkovým krémem</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
-							139,-
+							115,-
 						</span>
 </p>
 <p>
-<strong>Teplý bufet: Žebírka Pečená, štika s kapari a olivami, zelenina, kari cizrna, pečené brambory</strong>
+<strong>Teplý bufet: hovězí na žampionech, žebírka, zelenina, ryze, pečené brambory</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							49,-
 						</span>
 </p>
 <p>
-<strong>Salátový bufet: Rajčatový, celerový, kuskus s kapari, olivami a sušenými rajčaty</strong>
+<strong>Salátový bufet: celerový, kuskus s kapari, olivami a sušenými rajčaty, cizrnový s kari</strong>
 <!--<span class="dots">..........................................................................</span>-->
 <span class="priceLabel">
 							45,-
@@ -52,7 +52,42 @@
 <div class="obedovycas"><span>Menu:</span> <em>11:00–14:00</em></div>
 <div class="nadpis">Pátek 15.7.2022</div>
 <ul>
-<li class="polevka">Pro tento den nebylo zadáno menu.</li> </ul>
+<li class="poznamka">
+<div class="polozka">Snickers roláda </div>
+<div class="cena">45 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Višňový dort</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="poznamka">
+<div class="polozka">Ovocný salát</div>
+<div class="cena">59 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Cizrnová polévka s rajčaty a římským kmínem; v menu <em title="Mléko">7</em></div>
+<div class="cena">39 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="polevka">
+<div class="polozka">300ml Cizrnová polévka s rajčaty a římským kminem; samostatně <em title="Mléko">7</em></div>
+<div class="cena">49 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">1. </span>150g Grilovaný kuřecí steak s provensálským kořením, sýrová omáčka, opečené brambory, baby špenát, cherry rajče</div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+<li class="jidlo">
+<div class="polozka"><span class="poradi">2. </span>300g Zapečené palačinky s ratatouille zeleninou a sýrem cheddar, variace listových salátů <em title="Obiloviny obsahující lepek">1</em><em title="Vejce">3</em><em title="Mléko">7</em></div>
+<div class="cena">155 Kč</div>
+<div class="clear"></div>
+</li>
+</ul>
 </div>
 </td>
 </tr>
